Fixed an inconsistency in the contact form's colors in dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -565,7 +565,8 @@ textarea {
     textarea {
       width: 100%;
       font-size: 1.6rem;
-      color: #333;
+      color: var(--textColor);
+      background-color: var(--bodyBackgroundColor);
       border: none;
       border-bottom: 1px solid var(--textColor);
       padding-bottom: 1.6rem;
